[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Model/ModelUnit.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Model/ModelUnit.gd" type="Script" id=2]
[ext_resource path="res://frames/baneling/baneling.tres" type="SpriteFrames" id=3]

[node name="ModelBaneling" instance=ExtResource( 1 )]

script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
scale_factor = 0.4

[node name="AnimatedSprite" parent="." index="0"]

position = Vector2( 0, -30 )
scale = Vector2( 0.4, 0.4 )
frames = ExtResource( 3 )
animation = "move_2"
frame = 2
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Muzzles" parent="." index="1"]

_sections_unfolded = [ "Transform" ]

[node name="LifeBar" parent="." index="2"]

margin_left = -60.0
margin_top = -67.0
margin_right = 81.0
margin_bottom = -59.0
rect_scale = Vector2( 0.4, 0.4 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures" ]

[node name="EnegyBar" parent="." index="3"]

margin_left = -60.0
margin_top = -63.0
margin_right = 81.0
margin_bottom = -55.0
rect_scale = Vector2( 0.4, 0.4 )


